# nanobind-viser-repro

./: CMakeLists.txt  README.md  pyproject.toml  repro_example.py  repro_example_class.py  repro_example_scoped.py
src/: repro_extension.cpp
src/nanobind_viser_repro/: __init__.py
