[build-system]
requires = ["scikit-build-core >=0.10", "nanobind >=1.3.2"]
build-backend = "scikit_build_core.build"

[project]
name = "nanobind_viser_repro"
version = "0.0.42"
description = "Reproduction example for reference leaking using nanobind and viser."
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Sebastian Castro", email = "sebas.a.castro@gmail.com" },
]
classifiers = [
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "viser == 1.0.0",
]

[tool.scikit-build]
minimum-version = "build-system.requires"

build-dir = "build/{wheel_tag}"
